2.task/3.app/01.test.apple_banana/1.4.ingress.internal.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: route53-internal
  namespace: test
  annotations:
    kubernetes.io/ingress.class: nginx-internal
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - host: internal.tbiz-atcl.net
    http:
      paths:
        - path: /apple
          backend:
            serviceName: apple-service 
            servicePort: 5678
        - path: /banana
          backend:
            serviceName: banana-service 
            servicePort: 5678
  # This section is only required if TLS is to be enabled for the Ingress
  #tls:
  #    - hosts:
  #        - www.example.com
  #      secretName: example-tls
